# atlas-worker

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.travis/: install-activemq-cpp.sh  install-assimp.sh  install-poco-all.sh
CMakeModules/: FindAPR.cmake  FindASSIMP.cmake  FindActiveMQ-CPP.cmake  FindBoostStomp.cmake  FindCXX11.cmake  FindContrib.cmake  FindJansson.cmake  FindPoco.cmake
include/: CMakeLists.txt
include/atlas/model/: Asset.hpp  AtlasMaterial.hpp  Blob.hpp  BlobHolder.hpp  Folder.hpp
src/: CMakeLists.txt
src/AssimpWorker/: CMakeLists.txt  main.cpp
src/AssimpWorker/connection/: CMakeLists.txt  Connection.cpp  Connection.hpp  EasyRequest.cpp  EasyRequest.hpp  FeedbackProducer.cpp  FeedbackProducer.hpp  QueueConsumer.cpp  QueueConsumer.hpp
src/AssimpWorker/import/: AssimpImporter.cpp  AssimpImporter.hpp  BoostLog.cpp  BoostLog.hpp  CMakeLists.txt  FileImporter.cpp  FileImporter.hpp  Importer.cpp  Importer.hpp  Log.cpp  Log.hpp
src/AssimpWorker/import/AMLImporter/: AMLFrameImporter.cpp  AMLFrameImporter.hpp  AMLImporter.cpp  AMLImporter.hpp  CMakeLists.txt  ColladaMassager.cpp  ColladaMassager.hpp  ColladaMassagerRegistry.cpp  ColladaMassagerRegistry.hpp  ColladaRecursiveImporter.cpp  ColladaRecursiveImporter.hpp
src/AssimpWorker/import/AiImporter/: AiMaterialImporter.cpp  AiMaterialImporter.hpp  AiMeshImporter.cpp  AiMeshImporter.hpp  AiNodeImporter.cpp  AiNodeImporter.hpp  AiSceneImporter.cpp  AiSceneImporter.hpp  CMakeLists.txt
src/AssimpWorker/import/ColladaImporter/: CMakeLists.txt  ColladaImporter.cpp  ColladaImporter.hpp  ColladaMassager.cpp  ColladaMassager.hpp  ColladaMassagerRegistry.cpp  ColladaMassagerRegistry.hpp  ColladaRecursiveImporter.cpp  ColladaRecursiveImporter.hpp
src/AssimpWorker/internal/: AssimpVersion.cpp  AssimpVersion.hpp  CMakeLists.txt  Exception.cpp  Exception.hpp  Iterator.hpp  Version.cpp.in  Version.h  configuration.cpp  configuration.hpp
src/AssimpWorker/model/: Asset.cpp  Blob.cpp  CMakeLists.txt  Folder.cpp
src/AssimpWorker/storage/: CMakeLists.txt  DiskStorageService.cpp  DiskStorageService.hpp  JCRStorageService.cpp  JCRStorageService.hpp  JsonSerializer.cpp  JsonSerializer.hpp  StorageService.cpp  StorageService.hpp
src/AssimpWorker/worker/: CMakeLists.txt  WorkUnit.cpp  WorkUnit.hpp  Worker.cpp  Worker.hpp  zipFileDecompressor.cpp  zipFileDecompressor.hpp
